<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">Luxe</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>
    <string name="email">e-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_account">Save</string>
    <string name="welcome">Welcome to Luxr!</string>
    <string name="favs_button">Favorites</string>
    <string name="upload">Upload</string>
    <string name="style_button">Style</string>
    <string name="save_look">Save</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="styleImage">Style Image</string>
    <string name="instructions">Easily style yourself with Luxe! Find navigation in the top bar. Upload single articles of clothing against a white background for best effect. Find all uploads saved in the Gallery.</string>
    <string name="welcome_msg">Welcome to Luxe!</string>
    <string name="type_tops">Tops</string>
    <string name="type_bottoms">Bottoms</string>
    <string name="type_jackets">Jackets</string>
    <string name="type_dresses">Dresses</string>
    <string name="type_jumpsuits">Jumpsuits</string>
    <string name="type_shoes">Shoes</string>
    <string name="type_accessories">Accessories</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>
    <string name="type_orange">Orange</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_purple">Purple</string>
    <string name="color_gray">Gray</string>
    <string name="color_brown">Brown</string>
    <string name="color_black">Black</string>
    <string name="color_gold">Gold</string>
    <string name="color_silver">Silver</string>
    <string name="color_pink">Pink</string>
    <string name="color_white">White</string>
    <string name="color_page">Color</string>
    <string name="type_page">Type</string>
    <string name="next_button">next</string>
    <string name="reupload">Retake</string>
    <string name="confirm">Confirm</string>
    <string name="photo_edit">edited_photo</string>
    <string name="app_label">Luxe</string>
    <string name="search_hint">colors</string>
    <string name="color">Color</string>
    <string name="type">Type</string>
    <string-array name="style_spinner">
        <item name="Accessories"></item>
        <item name="Bottoms"></item>
        <item name = "Dresses"></item>
        <item name ="Jackets"></item>
        <item name = "Jumpsuits"></item>
        <item name = "Shoes"></item>
        <item name = "Tops"></item>
        <item name = "Black"></item>
        <item name = "Blue"></item>
        <item name = "Brown"></item>
        <item name = "Green"></item>
        <item name = "Gray"></item>
        <item name = "Gold"></item>
        <item name = "Orange"></item>
        <item name = "Pink"></item>
        <item name ="Purple"></item>
        <item name = "Red"></item>
        <item name = "Silver"></item>
        <item name = "White"></item>
        <item name ="Yellow"></item>
    </string-array>
</resources>
