<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.luxr.MainActivity">
    <item
        android:icon="@mipmap/ic_save_black_24dp"
        android:title="@string/save_look"
        app:showAsAction="always" />
    <item
        android:icon="@mipmap/ic_favorite_black_24dp"
        android:title="@string/favs_button"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home" />
    <item
        android:id="@+id/action_account"
        android:orderInCategory="101"
        android:title="@string/action_account" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings" />
</menu>
