<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="335dp"
        android:layout_height="47dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:text="@string/welcome"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        tools:text="@string/next_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="194dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="333dp"
        android:layout_height="103dp"
        android:text="@string/instructions"
        tools:text="@string/instructions"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="81dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>